# VulkanRaytracing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  config.h  main.cpp  vkutils.hpp
src/shaders/: closesthit.rchit  compile.bat  miss.rmiss  raygen.rgen
